--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "^8.3.0",
     "@react-native-picker/picker": "2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
@@ -20,13 +21,17 @@
     "appwrite": "^17.0.2",
     "date-fns": "^4.1.0",
     "expo": "~53.0.9",
+    "expo-av": "~15.1.4",
     "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.6",
+    "expo-device": "~7.1.4",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.1.7",
     "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.5",
+    "expo-media-library": "~17.1.6",
+    "expo-notifications": "^0.31.3",
     "expo-print": "~14.1.4",
     "expo-router": "~5.0.6",
     "expo-sharing": "~13.1.5",
@@ -51,9 +56,7 @@
     "react-native-signature-canvas": "^4.7.4",
     "react-native-text-recognition": "^1.0.2",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "^13.13.5",
-    "expo-media-library": "~17.1.6",
-    "expo-av": "~15.1.4"
+    "react-native-webview": "^13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
